# safeclaw

./: .gitattributes  .gitignore  LICENSE  README.md  WIP_new_folder_structure.md  WIP_top_down_permissions_install.md  git-push.sh
.devcontainer/: DEVCONTAINERS.md  devcontainer.json  docker-compose.llama.yml  docker-compose.yml  maintenance-off.sh  maintenance-on.sh
.devcontainer/containers/: SIMPLE_BROWSER.md
.devcontainer/containers/cognee/: Dockerfile.origin  README.md  docker-compose.yml
.devcontainer/containers/llama/ubuntu/: docker-compose.yml  vulkan.Dockerfile  vulkan.docker-compose.yml
.devcontainer/containers/llm/: download_tips
.devcontainer/containers/llm/llama/ubuntu/: Dockerfile  Dockerfile.origin.vulkan.curl  Dockerfile.origin.vulkan.ssl  entrypoint.sh  (+2 more)
.devcontainer/containers/llm/tabbyAPI/ubuntu/: README.md  config.yml  pyproject.toml
.devcontainer/containers/mem/cognee/: WORKFLOW.md  docker-compose.yml
.devcontainer/containers/obsidian/debian/: Dockerfile  README.md  docker-compose.yml
.devcontainer/containers/ollama/ubuntu/: Dockerfile  devcontainer.json
.devcontainer/containers/openclaw/debian/: Dockerfile  START_HERE.md  devcontainer.json  docker-compose.yml  entrypoint.sh  openclaw.env  openclaw.json  post-compose.sh
.devcontainer/containers/squid/alpine/: Dockerfile.open  Dockerfile.safe  DockerfileTemp  devcontainer.json  docker-compose.yml  squid.conf  squidTemp.conf  start-squid.sh
.devcontainer/containers/tabbyAPI/ubuntu/: Dockerfile  Dockerfile.origin  README.md  README.ms  config.yml  docker-compose.yml  pyproject.toml
(+22 files in other folders)
