[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "tabbyAPI"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi-slim >= 0.115",
    "pydantic == 2.11.0",
    "ruamel.yaml",
    "rich",
    "uvicorn >= 0.28.1",
    "jinja2 >= 3.0.0",
    "loguru",
    "sse-starlette >= 2.2.0",
    "packaging",
    "tokenizers >= 0.21.0",
    "formatron >= 0.4.11",
    "kbnf >= 0.4.1",
    "aiofiles",
    "aiohttp",
    "async_lru",
    "huggingface_hub == 0.25.2",
    "psutil",
    "httptools >= 0.5.0",
    "pillow",
    "uvloop",
    "setuptools",
    "requests",
    "torch @ https://download.pytorch.org/whl/cu128/torch-2.9.0%2Bcu128-cp312-cp312-manylinux_2_28_x86_64.whl",
    "exllamav2 @ https://github.com/turboderp-org/exllamav2/releases/download/v0.3.2/exllamav2-0.3.2+cu128.torch2.9.0-cp312-cp312-linux_x86_64.whl",
    "flash_attn @ https://github.com/kingbri1/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu128torch2.9.0cxx11abiFALSE-cp312-cp312-linux_x86_64.whl",
]